Adicionar OutroContato CRUD, TipoContato e relatórios
Introduz as funcionalidades do domínio OutroContato e relatórios por usuário. Adiciona o enum TipoContato, exceções, DTOs, controlador, mapeadores e métodos de gateway para suportar CRUD (listar, criar, atualizar, excluir) com validações para telefone duplicado e um único GERENTE por usuário. Atualiza os provedores de dados, repositórios e mapeadores (incluindo um novo fluxo ObjetoRelatorioDto/Entity) para que os relatórios sejam gerados por usuário; altera o RelatorioUseCase para iterar usuários, construir XLSX com cabeçalhos de atributos dinâmicos e enviar relatórios para o contato GERENTE. Adiciona a migração Flyway V2_0_3 para adicionar tipo_contato e id_usuario a outros_contatos e outras alterações de suporte (listagem de Usuario, ajuste de horário de agendamento, remoção do ApiKeyAuthFilter e um arquivo test_plan_report.md).